# gemini-live-voice-cpp

./: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
include/: audio_handler.h  config.h  message_handler.h  websocket_client.h
src/: audio_handler.cpp  config.cpp  main.cpp  message_handler.cpp  websocket_client.cpp
tests/: test_audio.cpp  test_playback.cpp  test_websocket.cpp
